# Piper

./: CMakeLists.txt  LICENSE  homepage.html  piper.desktop  readme.md
extensions/ublock/: admin-settings.json  manifest.json
res/: resources.qrc
src/: CMakeLists.txt  main.cpp
src/ui/: browserwindow.cpp  browserwindow.h  urlinterceptor.cpp  urlinterceptor.h
